updated to java 11 and gradle 6.2.2
Signed-off-by: Marcel Wagner <wagmarcel@web.de>